# macula-hebrew

WLC/lowfat/: 01-Gen-001-lowfat.xml  01-Gen-002-lowfat.xml  01-Gen-003-lowfat.xml  01-Gen-004-lowfat.xml  01-Gen-005-lowfat.xml  01-Gen-006-lowfat.xml  01-Gen-007-lowfat.xml  01-Gen-008-lowfat.xml  01-Gen-009-lowfat.xml  01-Gen-010-lowfat.xml  01-Gen-011-lowfat.xml  01-Gen-012-lowfat.xml  01-Gen-013-lowfat.xml  01-Gen-014-lowfat.xml  01-Gen-015-lowfat.xml  01-Gen-016-lowfat.xml  01-Gen-017-lowfat.xml  01-Gen-018-lowfat.xml  01-Gen-019-lowfat.xml  01-Gen-020-lowfat.xml  01-Gen-021-lowfat.xml  01-Gen-022-lowfat.xml  01-Gen-023-lowfat.xml  01-Gen-024-lowfat.xml  01-Gen-025-lowfat.xml  01-Gen-026-lowfat.xml  01-Gen-027-lowfat.xml  01-Gen-028-lowfat.xml  01-Gen-029-lowfat.xml  01-Gen-030-lowfat.xml  01-Gen-031-lowfat.xml  01-Gen-032-lowfat.xml  01-Gen-033-lowfat.xml  01-Gen-034-lowfat.xml  01-Gen-035-lowfat.xml  01-Gen-036-lowfat.xml  01-Gen-037-lowfat.xml  01-Gen-038-lowfat.xml  01-Gen-039-lowfat.xml  01-Gen-040-lowfat.xml  (+885 more)
WLC/nodes/: 01-Gen-001.xml  01-Gen-002.xml  01-Gen-003.xml  01-Gen-004.xml  01-Gen-005.xml  01-Gen-006.xml  01-Gen-007.xml  01-Gen-008.xml  01-Gen-009.xml  01-Gen-010.xml  01-Gen-011.xml  01-Gen-012.xml  01-Gen-013.xml  01-Gen-014.xml  01-Gen-015.xml  01-Gen-016.xml  01-Gen-017.xml  01-Gen-018.xml  01-Gen-019.xml  01-Gen-020.xml  01-Gen-021.xml  01-Gen-022.xml  01-Gen-023.xml  01-Gen-024.xml  01-Gen-025.xml  01-Gen-026.xml  (+903 more)
pipelines/apply-sil-glosses/: README.md  main.py  pyproject.toml
pipelines/nodes-format/: README.md  main.py  pyproject.toml
(+5 files in other folders)
