[tool.poetry]
name = "nodes-format"
version = "0.0.1"
description = "Pipeline to reformat XML files in WLC/nodes"
authors = ["Biblica's Clear Bible Data Team"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
saxonche = "^12.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ipdb = "^0.13.13"
ipython = "^8.15.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
